--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "karthik",
+  "name": "Anoop",
   "title": "git-page",
   "version": "3.3.7+1",
   "homepage": "http://startbootstrap.com/template-overviews/creative",
-  "author": "Karthik",
+  "author": "Anoop",
   "license": {
     "type": "MIT",
     "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
